fix css on ie

--- a/projects/prototype/source/public/css/main.less
+++ b/projects/prototype/source/public/css/main.less
@@ -45,7 +45,7 @@ body {
     }
 }
 
-#main.container {
+#main.container-fluid {
 
     pre {
         margin-bottom: 3px;
